[project]
name = "huo2025"
version = "0.1.0"
description = ""
authors = [
    {name = "Yu Huo",email = "yhuo@tuta.io"}
]
license = {text = "MIT"}
requires-python = "3.10.*"
dependencies = [
    "omniplate (==0.9.95)",
    "scipy (==1.10.1)",
    "scikit-image (==0.21.0)",
    "nunchaku (==0.15.1)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
