[project]
name = "huo2025"
version = "0.1.0"
description = "Codes for reproducing figures in Huo et al (2025) Commun Biol."
authors = [
    {name = "Yu Huo",email = "yhuo@tuta.io"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "3.10.*"
dependencies = [
    "omniplate (==0.9.95)",
    "scipy (==1.10.1)",
    "scikit-image (==0.21.0)",
    "matplotlib-venn (==1.1.1)",
    "sympy (>=1.13.3,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry]
packages = [{ include = "src" }, {include = "src/utils"}, {include = "src/wela"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
